# cheese-app-v4

./: .gitignore  README.md
.github/workflows/: app-ci-cd-gcp.yml  ml-ci-cd-gcp.yml
src/api-service/: docker-hub.sh  docker-shell.sh
src/api-service/api/: service.py
src/api-service/api/routers/: llm_cnn_chat.py
src/api-service/api/utils/: llm_cnn_utils.py  llm_rag_utils.py  llm_utils.py
src/deployment/: .docker-tag  .gitignore  Dockerfile  cli.py  deploy-docker-images-app.yml  deploy-docker-images-ml.yml  deploy-k8s-cluster.yml  deploy-k8s-update.sh  deploy-ml-images.sh  docker-entrypoint.sh  docker-shell.sh  docker_config.json  dockerignore  inventory.yml  pyproject.toml  run-data-collector.sh  run-data-processor.sh  update-k8s-cluster.yml
src/deployment/deploy_images/: Pulumi.dev.yaml  __main__.py
src/deployment/deploy_images_ml/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
src/deployment/deploy_k8s/: Pulumi.dev.yaml  Pulumi.ssl.yaml  __main__.py  setup_containers.py  setup_loadbalancer.py  setup_loadbalancer_ssl.py
src/deployment/deploy_single_vm/: Pulumi.dev-test.yaml  Pulumi.dev.yaml  create_instance.py  setup_containers.py  setup_containers_using_command.py
src/frontend-react/: Dockerfile  docker-hub.sh  next.config.js  package.json
src/frontend-react/src/services/: Common.js  DataService.js
src/frontend-simple/: Dockerfile
src/vector-db/: .gitignore  agent_tools.py  cli.py  docker-compose.yml  docker-entrypoint.sh  docker-hub.sh  docker-shell.sh
src/workflow/: cli.py  data_collector.yaml  docker-entrypoint.sh  docker-shell.sh  pipeline.yaml
(+10 files in other folders)
