[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.120.0",
    "kfp>=2.14.6",
    "pulumi>=3.33.1",
    "pulumi-command>=1.0.1",
    "pulumi-docker>=4.5.6",
    "pulumi-docker-build>=0.0.6",
    "pulumi-gcp>=8.5.0",
    "pulumi-kubernetes>=4.9.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
